# vmc

./: .editorconfig  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml
examples/: marionette.rs  performer.rs  recorder.rs
src/: error.rs  lib.rs  message.rs  udp.rs
src/osc/: decoder.rs  encoder.rs  error.rs  mod.rs
