[package]
name = "vmc"
version = "0.3.0"
license = "MIT OR Apache-2.0"
description = "Implementation of Virtual Motion Capture protocol for virtual avatar tracking."
repository = "https://github.com/vitri-ent/vmc"
documentation = "https://docs.rs/vmc"
readme = "README.md"
edition = "2021"
keywords = [ "osc" ]
categories = [ "network-programming", "asynchronous" ]
authors = [
	"Carson M. <carson@pyke.io>"
]
rust-version = "1.70"

[features]
default = []
serde = [ "dep:serde", "nalgebra/serde-serialize" ]

[dependencies]
nalgebra = "0.32"
nom = { version = "7.1", default-features = false, features = [ "alloc" ] }
serde = { version = "1.0", optional = true, features = [ "derive" ] }
tokio = { version = "1.30", features = [ "net" ] }
tokio-stream = "0.1"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.30", features = [ "net", "macros", "signal", "rt-multi-thread" ] }
tokio-test = "0.4"
approx = "0.5"
rmp-serde = "1.1"
console = "0.15"
