[package]
name = "vmc"
version = "0.3.0"
license = "MIT OR Apache-2.0"
description = "Implementation of Virtual Motion Capture protocol for virtual avatar tracking."
repository = "https://github.com/vitri-ent/vmc"
documentation = "https://docs.rs/vmc"
readme = "README.md"
edition = "2021"
keywords = [ "osc" ]
categories = [ "network-programming", "asynchronous" ]
authors = [
	"Carson M. <carson@pyke.io>"
]
rust-version = "1.70"

[features]
default = []
serde = [ "dep:serde", "glam/serde" ]

[dependencies]
glam = "0.29"
nom = { version = "7.1", default-features = false, features = [ "alloc" ] }
serde = { version = "1.0", optional = true, features = [ "derive" ] }
tokio = { version = "1.30", features = [ "net" ] }
futures-core = "0.3"
thiserror = "1.0"

[dev-dependencies]
glam = { version = "0.29", features = [ "approx" ] }
tokio = { version = "1.30", features = [ "net", "macros", "signal", "rt-multi-thread" ] }
tokio-test = "0.4"
futures-util = "0.3"
approx = "0.5"
rmp-serde = "1.1"
console = "0.15"

[[example]]
name = "recorder"
required-features = ["serde"]
